# msdev-kit

./: .gitignore  LICENSE  README.md  auth.py  connect_ssas_example.ipynb  connect_to_fabric_lakehouse.py  data_hub.ipynb  dataflow.py  dataset.py  kql.py  lakehouse.py  operations.py  pyproject.toml  report.py  requirements.txt  test.ipynb  usage.ipynb  workspace.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: collaboration.yml  publish.yml
docs/superpowers/plans/: 2026-03-31-msdev-kit.md
docs/superpowers/specs/: 2026-03-31-msdev-kit-design.md
examples/: README.md  _setup.py  database.py  dataflows.py  datasets.py  graph.py  notebooks.py  pipelines.py  sharepoint.py  workspaces.py
fabric_api/: __init__.py  capacity.py  database.py  dataflow.py  dataset.py  lakehouse.py  pipeline.py  report.py  workspace.py
msdev_kit/: __init__.py  auth.py
msdev_kit/fabric/: __init__.py  admin.py  dataflow.py  dataset.py  kql.py  notebook.py  operations.py  pipeline.py  report.py  workspace.py
msdev_kit/graph/: client.py
msdev_kit/sharepoint/: __init__.py  client.py
powerbi_api/: __init__.py  auth.py  dataset.py  kql.py  lakehouse.py  operations.py  report.py  utilities.py  workspace.py
tests/: test_dataflow.py
tests/fabric/: test_auth.py  test_dataflow.py  test_dataset.py  test_notebook.py  test_pipeline.py  test_report.py
tests/graph/: test_graph.py
tests/sharepoint/: test_sharepoint.py
utils/: .env.example
