[project]
name = "msdev-kit"
description = "Microsoft developer toolkit: Fabric, MS Graph, and SharePoint"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Bernardo Rufino", email = "contact@bernardorufino.com" }
]

dependencies = [
    "requests>=2.34.2",
    "azure-identity>=1.25.3,<2",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "openpyxl==3.1.5",
    "python-dotenv>=1.2.2,<2",
    "pyodbc==5.2.0",
    "sqlalchemy==2.0.44",
    "pyyaml (>=6.0.3,<7.0.0)",
    "azure-kusto-data (>=6.0.3,<7.0.0)",
    "cryptography (>=48.0.1,<49.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/Bernardo-Rufino/msdev-kit"
Repository = "https://github.com/Bernardo-Rufino/msdev-kit"

[tool.poetry]
packages = [{include = "msdev_kit"}]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests that require live Fabric API access (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
